Fixes campaign title and overlay on mobile

--- a/themes/custom/cafb_dc/sass/components/_campaign_banner.scss
+++ b/themes/custom/cafb_dc/sass/components/_campaign_banner.scss
@@ -22,6 +22,7 @@
       width: 100%;
       @include mobile {
         height: auto;
+        min-height: 250px;
       }
     }
 
@@ -60,6 +61,7 @@
     a { color: $white; }
 
     @include mobile {
+      display: none;
       width: 100%;
       margin-top: 0;
     }
